--- a/core/templates/dashboard/super_owner/settings.html
+++ b/core/templates/dashboard/super_owner/settings.html
@@ -74,6 +74,12 @@
                                     <input type="number" class="form-control" id="free_delivery_threshold" name="free_delivery_threshold" 
                                            value="{{ settings.free_delivery_threshold }}" min="0" step="0.01" required>
                                 </div>
+                                
+                                <div class="mb-3">
+                                    <label for="delivery_company_phone" class="form-label">هاتف شركة التوصيل الافتراضي</label>
+                                    <input type="tel" class="form-control" id="delivery_company_phone" name="delivery_company_phone" 
+                                           value="{{ settings.delivery_company_phone }}" placeholder="07xxxxxxxxx أو +9647xxxxxxxx">
+                                </div>
                             </div>
                             
                             <div class="col-md-6">
