--- a/core/templates/share/store.html
+++ b/core/templates/share/store.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load math_filters %}
 {% block content %}
 <div class="container py-4" dir="rtl">
   {% if not order %}
@@ -71,7 +72,7 @@
           </div>
           <div class="d-flex justify-content-between pt-2 border-top">
             <span class="fw-bold">الإجمالي:</span>
-            <span class="fw-bold">{{ order.total_amount|iqd }}</span>
+            <span class="fw-bold">{{ order.total_amount|floatformat:0 }} د.ع</span>
           </div>
         </div>
       </div>
